@@ -48,7 +48,7 @@ readonly INITIAL_BASH_FLAGS_AND_OPTIONS_COMMANDS="$( get_bash_flags_and_options_
 # Versioning
 readonly PRODUCT="Disaster Recovery Linux Manager"
 readonly PROGRAM=${0##*/}
-readonly VERSION=2.4.9
+readonly VERSION=2.4.10
 readonly RELEASE_DATE="Git"
 
 readonly STARTTIME=$SECONDS
