@@ -252,7 +252,7 @@ BKP_CLI_PER=1
 #
 #    ERR_REPORT=[yes|no]
 #	default: no
-#    REPORT_TYPE=[ovo|nsca-ng|nsca|nrdp|zabbix|mail]
+#    REPORT_TYPE=[ovo|nsca-ng|nsca|nrdp|zabbix|mail|xml|json]
 #	default: empty
 #
 ########
@@ -336,6 +336,65 @@ MAILCONF="/etc/drlm/alerts/mail.cfg"
 MAIL_TO="root@localhost"
 MAIL_CC=""
 MAIL_BCC=""
+
+#
+# REPORT_TYPE=[xml|json]
+#
+# XML VARIABLES
+# =============
+#
+# These are default values and can be overwritten in local.conf according to your XML installation and configuration.
+#  DRLM_SEND_ERROR_BIN="/usr/sbin/drlm-send-error"   #Default drlm-send-error command path
+#  DRLM_SEND_ERROR_URL="http://servertostorexml:9090/"	 #Desired URL to send the XML to
+#  DRLM_SEND_ERROR_MSG=									 
+#	If DRLM_SEND_ERROR_MSG is set to "" will be send a default error like the next one:
+#
+#			<drlm>
+#			   <version>2.4.10-git</version>
+#			   <type>ERROR</type>
+#			   <server>drlmserver</server>
+#			   <client>drlmclient</client>
+#			   <configuration>default</configuration>
+#			   <os>Debian 11.6</os>
+#			   <rear>2.6/2020-06-17</rear>
+#			   <workflow>runbackup</workflow>
+#			   <message>2023-02-09 09:11:21 drlm:runbackup:drlmclient:ERROR: Client drlmclient SSH Server on 22 port is not available</message>
+#			</drlm>
+#
+#   But DRLM_SEND_ERROR_MSG can be customized specifying an XML string containing DRLM runtime environment variables. 
+#	For example: DRLM_SEND_ERROR_MSG='<drlm><server>$HOSTNAME</server><client>$CLI_NAME</client><nbd>$NBD_DEVICE</nbd><message>$ERRMSG</message></drlm>'
+#	In the header of the runbackup scripts (/usr/share/drlm/backup/run/default/*.sh) you can find all the variables available at any time
+#   
+# JSON VARIABLES
+# ==============
+#
+# These are default values and can be overwritten in local.conf according to your JSON installation and configuration.
+#  DRLM_SEND_ERROR_BIN="/usr/sbin/drlm-send-error"       #Default drlm-send-error command path
+#  DRLM_SEND_ERROR_URL="http://servertostorejson:9090/"	 #Desired URL to send the JSON to
+#  DRLM_SEND_ERROR_MSG=									 
+#	If DRLM_SEND_ERROR_MSG is set to "" will be send a default error like the next one:
+#
+#   {
+#	  "program":"drlm", 
+#	  "version":"2.4.10",
+#	  "type":"ERROR",
+#	  "server":"drlmserver",
+#	  "client":"drlmclient",
+#	  "configuration":"default",
+#	  "os":"Debian 11.6",
+#	  "rear":"2.6/2020-06-17",
+#	  "workflow":"runbackup",
+#	  "message":"2023-02-09 11:40:58 drlm:runbackup:drlmclient:ERROR: Client drlmclient SSH Server on 22 port is not available"
+#	}
+#
+#   But DRLM_SEND_ERROR_MSG can be customized specifying an JSON string containing DRLM runtime environment variables. 
+#	For example: DRLM_SEND_ERROR_MSG=''{\"name\":\"$HOSTNAME\", \"backup_type\":\"$DRLM_BKP_TYPE\", \"ERROR\":\"$ERRMSG\"}''
+#	In the header of the runbackup scripts (/usr/share/drlm/backup/run/default/*.sh) you can find all the variables available at any time
+#   
+
+DRLM_SEND_ERROR_BIN="/usr/sbin/drlm-send-error"
+DRLM_SEND_ERROR_URL=""
+DRLM_SEND_ERROR_MSG=""
 
 ################ ---- DHCP CONFIGURATION
 #
